--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -2,3 +2,10 @@
 $primarybutton: rba(56,146,142);
 $bodyBackground: rgba(239,237,236,0.7);
 
+/* Header colors */
+$headerBackground: rbga(215, 212, 208,0.7);
+$navTextColor: #85888b;
+$navTextColorActive: #FF2400;
+
+/*Text Size Header */
+$textSize: 1.2rem;
