--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,27 +1,30 @@
-@import "./nav";
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 @import "./variables";
+@import "./nav";
 
 * {
     margin: 0;
     padding: 0;
-    font-family: "Poppins, san-serif";
-    user-select: none;
+    font-family: 'Poppins', san-serif;
     box-sizing: border-box;
  }
 
 body {
     background-color: $bodyBackground;
+    user-select: none;
 }
 
 /* Sub tags */
-
-header {
-    background-color: lightblue;
-}
 
 p {
     font-size: 100%;
     text-indent: 2.5%;
     text-align: justify;
     padding: 1rem;
+}
+
+/*footer */
+
+footer {
+    background-color: grey;
 }
