--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -5,62 +5,59 @@
 header {
   background-color: lightblue;
   /* $headerBackground; */
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-}
-
-.logo {
-  color: lightcoral;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 1.2rem;
-}
-
-nav {
-  padding: 0;
-  text-align: center;
-  width: 100%;
-}
-
-nav ul {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  background-color: lightcoral;
 }
 
-nav ul li {
-  background-color: lightgreen;
-  margin-bottom: 1em;
-  margin-left: 1em;
+.logo {
+  text-transform: uppercase;
+  font-size: 1rem;
+}
+
+.logo a {
+  text-decoration: none;
+}
+
+nav ul {
+  background-color: lightcoral;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  list-style: none;
+  width: 100%;
 }
 
 nav ul ol {
-  padding: 1em;
+  list-style: none;
   background-color: black;
+}
+
+nav li {
+  padding: .5em;
+  text-align: center;
+  background-color: lightgreen;
+}
+
+nav li:hover {
+  color: #FF2400;
+  border-radius: 15%;
+  -webkit-box-shadow: 0 0 5px #85888b, 0 0 5px #85888b;
+          box-shadow: 0 0 5px #85888b, 0 0 5px #85888b;
 }
 
 nav a {
   color: #85888b;
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 1.2rem;
-}
-
-nav a:hover {
-  color: #FF2400;
-  border-radius: 10%;
-  -webkit-box-shadow: 0 0 5px #85888b, 0 0 10px #85888b;
-          box-shadow: 0 0 5px #85888b, 0 0 10px #85888b;
+  font-size: 1rem;
 }
 
 * {
