--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,9 +2,9 @@
 /* Colors */
 /* Header colors */
 /*Text Size Header */
+/* Device Widths */
 header {
   background-color: lightblue;
-  /* $headerBackground; */
   -ms-flex-pack: distribute;
       justify-content: space-around;
   -webkit-box-align: center;
@@ -13,6 +13,10 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  max-height: 15vh;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0vh;
 }
 
 .logo {
@@ -22,6 +26,10 @@ header {
 
 .logo a {
   text-decoration: none;
+}
+
+nav {
+  /* This is what is making the current page get highlighted */
 }
 
 nav ul {
@@ -37,6 +45,7 @@ nav ul {
 
 nav ul ol {
   list-style: none;
+  display: none;
   background-color: black;
 }
 
@@ -48,9 +57,9 @@ nav li {
 
 nav li:hover {
   color: #FF2400;
-  border-radius: 15%;
-  -webkit-box-shadow: 0 0 5px #85888b, 0 0 5px #85888b;
-          box-shadow: 0 0 5px #85888b, 0 0 5px #85888b;
+  border-radius: 10px;
+  -webkit-box-shadow: 0 0 10px #85888b;
+          box-shadow: 0 0 10px #85888b;
 }
 
 nav a {
@@ -58,6 +67,10 @@ nav a {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 1rem;
+}
+
+nav .currentpage a {
+  color: #C7423F;
 }
 
 * {
@@ -70,10 +83,6 @@ nav a {
 
 body {
   background-color: rgba(239, 237, 236, 0.7);
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
 }
 
 /* Sub tags */
@@ -82,6 +91,14 @@ p {
   text-indent: 2.5%;
   text-align: justify;
   padding: 1rem;
+}
+
+.card {
+  background-color: white;
+  padding: 1em;
+  margin: 2em;
+  -webkit-box-shadow: 0 0 50px #85888b;
+          box-shadow: 0 0 50px #85888b;
 }
 
 /*footer */
