--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -8,8 +8,17 @@ $navTextColor: #85888b;
 $navTextColorActive: #FF2400;
 $currentPage: #C7423F;
 
-/*Text Size Header */
-$textSize: 1rem;
+/* Text Modifications*/
+$pIndent: 2.5%;
+
+/* Text Size */
+$bodyText: 1rem;
+$head1: 4.5rem;
+$head2: 2.25rem;
+$head3: 1.25rem;
+
+
+
 
 /* Device Widths */
 $desktop: 1200px;
