--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,8 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
 /* Colors */
 /* Header colors */
-/*Text Size Header */
+/* Text Modifications*/
+/* Text Size */
 /* Device Widths */
 header {
   background-color: lightblue;
@@ -13,7 +14,7 @@ header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  max-height: 15vh;
+  min-height: 5vh;
   position: -webkit-sticky;
   position: sticky;
   top: 0vh;
@@ -21,19 +22,15 @@ header {
 
 .logo {
   text-transform: uppercase;
-  font-size: 1rem;
+  font-size: 2.25rem;
 }
 
 .logo a {
   text-decoration: none;
 }
 
-nav {
-  /* This is what is making the current page get highlighted */
-}
-
 nav ul {
-  background-color: lightcoral;
+  background-color: lightcoralS;
   -ms-flex-pack: distribute;
       justify-content: space-around;
   display: -webkit-box;
@@ -55,21 +52,23 @@ nav li {
   background-color: lightgreen;
 }
 
-nav li:hover {
+nav a {
+  color: #85888b;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 1.25rem;
+  padding: .5em;
+}
+
+nav a:hover {
   color: #FF2400;
   border-radius: 10px;
   -webkit-box-shadow: 0 0 10px #85888b;
           box-shadow: 0 0 10px #85888b;
 }
 
-nav a {
-  color: #85888b;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 1rem;
-}
-
-nav .currentpage a {
+/* Highlight the current page */
+.currentpage a {
   color: #C7423F;
 }
 
