--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
 @import "./variables";
 @import "./nav";
 
@@ -16,7 +16,7 @@ body {
 /* Sub tags */
 p {
     font-size: 100%;
-    text-indent: 2.5%;
+    text-indent: $pIndent;
     text-align: justify;
     padding: 1rem;
 }
@@ -33,3 +33,5 @@ p {
 footer {
     background-color: grey;
 }
+
+
