--- a/assets/css/_variables.scss
+++ b/assets/css/_variables.scss
@@ -10,15 +10,13 @@ $currentPage: #C7423F;
 
 /* Text Modifications*/
 $pIndent: 2.5%;
+$letter-spacing: .5px;
 
 /* Text Size */
 $bodyText: 1rem;
 $head1: 4.5rem;
 $head2: 2.25rem;
 $head3: 1.25rem;
-
-
-
 
 /* Device Widths */
 $desktop: 1200px;
