--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,67 +4,176 @@
 /* Text Modifications*/
 /* Text Size */
 /* Device Widths */
-header {
-  background-color: lightblue;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  min-height: 5vh;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0vh;
+/* Navigation bar for Laptop and Desktop */
+@media all and (min-width: 1024px) {
+  header {
+    min-height: 5vh;
+    position: -webkit-sticky;
+    position: sticky;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    top: 0vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  header .logo {
+    text-transform: uppercase;
+    font-size: 2.25rem;
+    padding-left: 2.5vw;
+  }
+  header .logo a {
+    text-decoration: none;
+  }
+  header .nav-toggle {
+    display: none;
+  }
+  header nav ul {
+    width: 100%;
+    list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    padding-right: 2.5vw;
+  }
+  header nav li {
+    padding: .5em;
+    text-align: center;
+  }
+  header nav a {
+    color: #85888b;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+    font-size: 1.25rem;
+    padding: .5em;
+  }
+  header nav a:hover, header nav a:focus {
+    color: #FF2400;
+    border-radius: 10px;
+    -webkit-box-shadow: 0 0 10px #85888b;
+            box-shadow: 0 0 10px #85888b;
+  }
 }
 
-.logo {
-  text-transform: uppercase;
-  font-size: 2.25rem;
-}
-
-.logo a {
-  text-decoration: none;
-}
-
-nav ul {
-  background-color: lightcoralS;
-  -ms-flex-pack: distribute;
-      justify-content: space-around;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  list-style: none;
-  width: 100%;
-}
-
-nav ul ol {
-  list-style: none;
-  display: none;
-  background-color: black;
-}
-
-nav li {
-  padding: .5em;
-  text-align: center;
-  background-color: lightgreen;
-}
-
-nav a {
-  color: #85888b;
-  text-decoration: none;
-  text-transform: uppercase;
-  font-size: 1.25rem;
-  padding: .5em;
-}
-
-nav a:hover {
-  color: #FF2400;
-  border-radius: 10px;
-  -webkit-box-shadow: 0 0 10px #85888b;
-          box-shadow: 0 0 10px #85888b;
+/* Naviagation Bar for Mobile and Tablet */
+@media only screen and (max-width: 1024px) {
+  header {
+    min-height: 5vh;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    top: 0vh;
+    position: -webkit-sticky;
+    position: sticky;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+  }
+  header .logo {
+    text-transform: uppercase;
+    font-size: 1.25rem;
+    padding-left: 2.5vw;
+  }
+  header .logo a {
+    text-decoration: none;
+  }
+  header .nav-toggle {
+    display: none;
+  }
+  header .nav-toggle:checked ~ nav {
+    -webkit-transform: scale(1, 1);
+            transform: scale(1, 1);
+  }
+  header .nav-toggle:checked ~ nav a {
+    opacity: 1;
+    -webkit-transition: opacity 250ms ease-in-out 275ms;
+    transition: opacity 250ms ease-in-out 275ms;
+  }
+  header .nav-toggle-label {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin-right: 5vw;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  header .nav-toggle-label span,
+  header .nav-toggle-label span::before,
+  header .nav-toggle-label span::after {
+    background-color: #85888b;
+    display: block;
+    height: 2px;
+    width: 2em;
+    position: relative;
+  }
+  header .nav-toggle-label span::before,
+  header .nav-toggle-label span::after {
+    content: "";
+    position: absolute;
+  }
+  header .nav-toggle-label span::before {
+    bottom: 7px;
+  }
+  header .nav-toggle-label span::after {
+    top: 7px;
+  }
+  header nav {
+    position: absolute;
+    text-align: center;
+    top: 100%;
+    width: 100%;
+    background-color: rgba(239, 237, 236, 0.7);
+    opacity: 1;
+    -webkit-transform: scale(1, 0);
+            transform: scale(1, 0);
+    -webkit-transition: -webkit-transform 400ms ease-in-out;
+    transition: -webkit-transform 400ms ease-in-out;
+    transition: transform 400ms ease-in-out;
+    transition: transform 400ms ease-in-out, -webkit-transform 400ms ease-in-out;
+    -webkit-transform-origin: top;
+            transform-origin: top;
+  }
+  header nav ul {
+    list-style: none;
+    height: 80vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+  }
+  header nav li {
+    text-align: center;
+  }
+  header nav a {
+    color: #85888b;
+    text-decoration: none;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+    font-size: 2.25rem;
+    padding: .5em;
+    opacity: 0;
+    -webkit-transition: opacity 150ms ease-in-out;
+    transition: opacity 150ms ease-in-out;
+  }
 }
 
 /* Highlight the current page */
