--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,6 +4,7 @@
 /* Text Modifications*/
 /* Text Size */
 /* Device Widths */
+/* Distances */
 /* Navigation bar for Laptop and Desktop */
 @media all and (min-width: 1024px) {
   header {
@@ -67,40 +68,42 @@
 @media only screen and (max-width: 1024px) {
   header {
     min-height: 5vh;
+    position: -webkit-sticky;
+    position: sticky;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    top: 0vh;
-    position: -webkit-sticky;
-    position: sticky;
+    top: 0;
+    width: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 100%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
-  header .logo {
+  .logo {
+    padding-left: 2.5vw;
     text-transform: uppercase;
     font-size: 1.25rem;
-    padding-left: 2.5vw;
   }
-  header .logo a {
+  .logo a {
     text-decoration: none;
   }
-  header .nav-toggle {
+  .nav-toggle {
     display: none;
   }
-  header .nav-toggle:checked ~ nav {
+  .nav-toggle:checked ~ nav {
     -webkit-transform: scale(1, 1);
             transform: scale(1, 1);
   }
-  header .nav-toggle:checked ~ nav a {
+  .nav-toggle:checked ~ nav a {
     opacity: 1;
     -webkit-transition: opacity 250ms ease-in-out 275ms;
     transition: opacity 250ms ease-in-out 275ms;
   }
-  header .nav-toggle-label {
+  .nav-toggle-label {
     position: absolute;
-    top: 0;
     right: 0;
     margin-right: 5vw;
     height: 100%;
@@ -111,33 +114,31 @@
         -ms-flex-align: center;
             align-items: center;
   }
-  header .nav-toggle-label span,
-  header .nav-toggle-label span::before,
-  header .nav-toggle-label span::after {
+  .nav-toggle-label span,
+  .nav-toggle-label span::before,
+  .nav-toggle-label span::after {
     background-color: #85888b;
-    display: block;
+    position: relative;
     height: 2px;
     width: 2em;
-    position: relative;
+    display: block;
   }
-  header .nav-toggle-label span::before,
-  header .nav-toggle-label span::after {
+  .nav-toggle-label span::before,
+  .nav-toggle-label span::after {
     content: "";
     position: absolute;
   }
-  header .nav-toggle-label span::before {
+  .nav-toggle-label span::before {
     bottom: 7px;
   }
-  header .nav-toggle-label span::after {
+  .nav-toggle-label span::after {
     top: 7px;
   }
-  header nav {
-    position: absolute;
-    text-align: center;
-    top: 100%;
-    width: 100%;
-    background-color: rgba(239, 237, 236, 0.7);
+  nav {
     opacity: 1;
+    position: absolute;
+    top: 5vh;
+    width: 100%;
     -webkit-transform: scale(1, 0);
             transform: scale(1, 0);
     -webkit-transition: -webkit-transform 400ms ease-in-out;
@@ -147,30 +148,34 @@
     -webkit-transform-origin: top;
             transform-origin: top;
   }
-  header nav ul {
+  nav ul {
     list-style: none;
     height: 80vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    width: 100%;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    -ms-flex-pack: distribute;
-        justify-content: space-around;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
-  header nav li {
+  nav li {
     text-align: center;
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
   }
-  header nav a {
-    color: #85888b;
+  nav a {
+    opacity: 0;
+    height: 100%;
     text-decoration: none;
     text-transform: uppercase;
     letter-spacing: 0.5px;
+    display: block;
     font-size: 2.25rem;
-    padding: .5em;
-    opacity: 0;
     -webkit-transition: opacity 150ms ease-in-out;
     transition: opacity 150ms ease-in-out;
   }
