--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -1,17 +1,25 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;700;800&display=swap');
 @import "./variables";
 @import "./nav";
+@import "./homePage";
+
+/*
+  Author: Steven Varada Salazr
+  Project: Resume Website
+  File: styles.scss
+  Date: Dec.23-2021
+  Description: This is the general styling for all of the css files in this project
+*/
 
 * {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', san-serif;
+    font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
+    background-color: transparent;
  }
 
-body {
-    background-color: $bodyBackground;
-}
+
 
 /* Sub tags */
 p {
@@ -19,13 +27,6 @@ p {
     text-indent: $pIndent;
     text-align: justify;
     padding: 1rem;
-}
-
-.card {
-    background-color: white;
-    padding: 1em;
-    margin: 2em;
-    box-shadow: 0 0 50px $navTextColor;
 }
 
 /*footer */
